backup/minio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - s3.portal-local
    secretName: minio-tls
  rules:
  - host: s3.portal-local
    http:
      paths:
        - path:
          backend:
            serviceName: minio
            servicePort: 9000
